Fix app header not staying aligned with story container

--- a/app/styles/_containers.scss
+++ b/app/styles/_containers.scss
@@ -14,6 +14,8 @@ body {
 }
 
 .app {
+  display: inline-flex;
+  flex-direction: column;
   &:focus {
     outline-width: 0;
   }
